# teadata

./: .gitattributes  .gitignore  AGENTS.md  Austin ISD Exploratory Analysis_10.2025.ipynb  GEMINI.md  LICENSE  MANIFEST.in  README.md  School District Exploratory Analysis_10.2025.ipynb  mkdocs.yml  pyproject.toml  requirements.txt  teadata_test.py
.cache/: entities_Current_Districts_2025_Schools_2024_to_2025.sqlite  map_payloads_Current_Districts_2025_Schools_2024_to_2025.sqlite
.github/workflows/: ci.yml
data/private_schools/: texas_private_schools_2025_sample.csv
docs/: config.md  enrichment.md  index.md  models.md  querying.md  reference.md  spatial.md  versioning.md
examples/: 75+ A or B_Econ Disadv - Accountability Analysis_10.21.25.xlsx  75+ D or F_Econ Disadv - Accountability Analysis_10.21.25.xlsx  ALL CAMPUSES_Econ Disadv - Accountability Analysis_10.21.25.xlsx  Austin ISD Consolidation Plan_Exploratory Analysis_10.2025.xlsx  Austin ISD Consolidation Plan_Exploratory Analysis_10.2025_FINAL.xlsx  Eco Disadv Analysis.ipynb  School District Exploratory Analysis_10.2025.ipynb  School District Exploratory Analysis_10.2025.py  campus_profile_report.py  campus_stats_charter.xlsx  campus_stats_charter_FINAL.xlsx  campus_stats_district.xlsx  campus_stats_district_FINAL.xlsx  charter_public_rating_overlap.py  restyle_existing_excel.py  teadata_test.py
teadata/: __init__.py  assets.py  boundary_store.py  classes.py  engine.py  entities.py  entity_store.py  geometry.py  grades.py  load_data.py  load_data2.py  map_store.py  query.py  teadata_config.py  teadata_sources.yaml
teadata/.cache/: entities_Current_Districts_2025_Schools_2024_to_2025.sqlite  map_payloads_Current_Districts_2025_Schools_2024_to_2025.sqlite
teadata/enrichment/: __init__.py  base.py  campuses.py  charter_networks.py  common.py  districts.py
teadata/persistence/: __init__.py  sqlalchemy_store.py
teadata/scripts/: build_campus_peims_financials_statewide_data.py  build_tapr_2025_profiles.py  check_env.py  download_campus_peims_financials.py  flatten_districts_geojson.py  fuzz_teadata.py  geocode_tepsac_data.py  rename_tapr_campus_headers.py  rename_tapr_district_headers.py  rename_tapr_headers.py  rename_tepsac_headers.py
tests/: test_asset_cache_and_store_logging.py  test_engine_dsl_indexes.py  test_entities.py  test_entity_store.py  test_load_data_percent_enrollment_change.py  test_nearest_charter_same_type.py  test_optional_deps.py  test_private_tefa_normalization.py  test_query.py  test_snapshot_loading.py  test_store_discovery.py  test_teadata_config.py  test_transfer_speedups.py
