[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "teadata"
version = "0.0.6"
description = "Pythonic data engine for Texas education datasets"
authors = [{name="Alejandro Peña", email="adpena@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "python-dateutil>=2.8.2",
    "numpy>=1.26",
    "pandas>=2.1",
    "shapely>=2.0",
    "geopandas>=0.14",
    "pyogrio>=0.7",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "duckdb>=0.10",
    "pyarrow>=14.0",
    "packaging>=23.2",
    "scipy>=1.10",
    "platformdirs>=3.7",
    "tomli>=2.0",
]
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.optional-dependencies]
# Faster I/O / performance add-ons
speedups = [
    "pyogrio>=0.7",
    "pygeos; python_version<'3.11'",  # no-op on modern, left for legacy envs
]

# Development tooling
dev = [
    "ruff>=0.5",
    "mypy>=1.8",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pip-tools>=7.4",
    "pip-audit>=2.7",
    "deptry>=0.16",
]

# Notebook-only dependencies used in .ipynb files
notebooks = [
    "jupyterlab>=4.0",
    "ipython>=8.0",
    "ipywidgets>=8.0",
    "ipyleaflet>=0.18",
    "itables>=1.6",
    "google-auth>=2.0",
    "google-api-python-client>=2.0",
]

# Relational database connectivity helpers
database = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
]

# Dependencies used by maintenance/utility scripts under teadata/scripts
scripts = [
    "requests>=2.31",
    "tqdm>=4.66",
    "geopy>=2.4",
    "aiohttp>=3.9",
]

[project.scripts]
teadata-config = "teadata_config:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["teadata*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
teadata = [".cache/*.pkl"]

[tool.setuptools]
include-package-data = true

[project.urls]
"Homepage" = "https://github.com/adpena/teadata"
"Bug Tracker" = "https://github.com/adpena/teadata/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.deptry]
# Optional: folders to skip
exclude = ["tests", "docs", "examples", ".ipynb_checkpoints"]
known_first_party = ["teadata"]

# Per-rule ignores by code
[tool.deptry.per_rule_ignores]
DEP002 = [
    "openpyxl",
    "pyogrio",
    "pyarrow",
    "pygeos",
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pip-tools",
    "pip-audit",
    "deptry",
    "python-dateutil",
    "jupyterlab",
    "google-api-python-client",
    "ipython",
    "ipywidgets",
    "ipyleaflet",
    "itables",
    "google-auth",
    "psycopg",
]
DEP003 = [
    "scipy",
    "google",        # namespace package; satisfied by google-auth/google-api-python-client
    "IPython",       # notebook-only; provided by optional 'notebooks' extra
    "ipyleaflet",    # notebook-only; provided by optional 'notebooks' extra
    "ipywidgets",    # notebook-only; provided by optional 'notebooks' extra
    "itables"        # notebook-only; provided by optional 'notebooks' extra
]
